  by a bug in flush_connections(&me), hopefully there won't be any side effects.
- Fixed file owner problems when IRC_UID/IRC_GID is used (eg: when running chrooted).
- Fixed crashbug if we were unable to write a remote include file to disk.
- Limited 'All Connections in Use' message to max 1 every 15s, this DOES NOT mean we will
  introduce throttling of other msgs (or making this configurable)... this is just
  an exception because this msg is sent to _all opers_ and you cannot disable it by
  unsetting certain snomasks. Anything lower than 15s would be bad anyway since this
  is a very serious error condition. Requested by LoVeR (#0001412).
- Added can_dccdeny operflag so you can give your local/global opers access to this too.
  Co-admin, admin, sadmin and netadmin get it by default. Suggested in #0001247.
- Updated operflag docs.
- '/rehash -all' had bugs and is now considered depricated, just use '/rehash' instead.
  On '/rehash' we reload everything already so the '-all' option was useless anyway.
  Reported by fez (#0001516).
- Made blocked dcc notices (sent to umode +v) global, suggested by neothematrix (#1513).
- [internal] cleaned up snomask removal after deoper, now remove_oper_snomasks() is
  called which might look a bit ugly, but is better than before (scattered on 3 places).
- Added snomasks 'N' which allows you to see nick changes of clients on other servers,
  requested by several people (#0001323).
- Made setting of -qaohv etc on services (+S) not possible unless you are a netadmin (purpose
  is to prevent people from deoping BotServ bots). Suggested by shiny (#0000917)
- Ripped out fast (bad)words support out of spamfilter to avoid confusion, also renamed
  spamfilter::word to spamfilter::regex to make it even more clear (since we match
  on the whole line and have nothing to do with words.. 'word' doesn't make sense).
- Updated docs with some better regex examples, reported by AngryWolf (#0001520).